// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init-mvs (SHORT) authLoadLib negatives 1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.PARMLIB(ZWESIP00)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) authLoadLib negatives 2`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.PARMLIB(ZWESIP00)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) authLoadLib negatives 3`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.PARMLIB(ZWESIP00)')
/*
//*********************************************************************
//*
//* Allocate the data set for authorized load library
//*
//*********************************************************************
//AUTHALOC EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
ALLOC NEW DA('DOES.NOT.EXIST.ALL') +
  dsntype(library) dsorg(po) recfm(u) lrecl(0) +
  blksize(32760) unit(sysallda) space(30,15) tracks
/*
//*********************************************************************
//*
//* Copy the data set members to authorized load library
//*
//*********************************************************************
//AUTHCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWEAUTH(ZWELNCH)') +
  OUTDATASET('DOES.NOT.EXIST.ALL(ZWELNCH)')
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWEAUTH(ZWESAUX)') +
  OUTDATASET('DOES.NOT.EXIST.ALL(ZWESAUX)')
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWEAUTH(ZWESISDL)') +
  OUTDATASET('DOES.NOT.EXIST.ALL(ZWESISDL)')
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWEAUTH(ZWESIS01)') +
  OUTDATASET('DOES.NOT.EXIST.ALL(ZWESIS01)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) authLoadLib negatives 4`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Warning ZWEL0301W: TEST.DATASET.PFX.ZWESAPL already exists and will not be overwritten. For upgrades, you must use --allow-overwrite.
Skipped writing to a dataset. To write, you must use --allow-overwrite.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) authLoadLib negatives 5`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.PARMLIB(ZWESIP00)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) authLoadLib negatives 6`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.PARMLIB(ZWESIP00)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) authLoadLib negatives 7`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.PARMLIB(ZWESIP00)')
/*
//*********************************************************************
//*
//* Allocate the data set for authorized load library
//*
//*********************************************************************
//AUTHALOC EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
ALLOC NEW DA('DOES.NOT.EXIST') +
  dsntype(library) dsorg(po) recfm(u) lrecl(0) +
  blksize(32760) unit(sysallda) space(30,15) tracks
/*
//*********************************************************************
//*
//* Copy the data set members to authorized load library
//*
//*********************************************************************
//AUTHCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWEAUTH(ZWELNCH)') +
  OUTDATASET('DOES.NOT.EXIST(ZWELNCH)')
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWEAUTH(ZWESAUX)') +
  OUTDATASET('DOES.NOT.EXIST(ZWESAUX)')
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWEAUTH(ZWESISDL)') +
  OUTDATASET('DOES.NOT.EXIST(ZWESISDL)')
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWEAUTH(ZWESIS01)') +
  OUTDATASET('DOES.NOT.EXIST(ZWESIS01)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) authLoadLib negatives 8`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.PARMLIB(ZWESIP00)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) authPluginLib negatives  1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.PARMLIB(ZWESIP00)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) authPluginLib negatives  2`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.PARMLIB(ZWESIP00)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) authPluginLib negatives  3`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.PARMLIB(ZWESIP00)')
/*
//*********************************************************************
//*
//* Allocate the data set for plug-ins
//*
//*********************************************************************
//APPLALOC EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
ALLOC NEW DA('DOES.NOT.EXIST.ALL') +
  dsntype(library) dsorg(po) recfm(u) lrecl(0) +
  blksize(32760) unit(sysallda) space(30,15) tracks
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) authPluginLib negatives  4`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.PARMLIB(ZWESIP00)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) authPluginLib negatives  5`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.PARMLIB(ZWESIP00)')
/*
//*********************************************************************
//*
//* Allocate the data set for plug-ins
//*
//*********************************************************************
//APPLALOC EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
ALLOC NEW DA('DOES.NOT.EXIST') +
  dsntype(library) dsorg(po) recfm(u) lrecl(0) +
  blksize(32760) unit(sysallda) space(30,15) tracks
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) authPluginLib negatives  6`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Allocate the data set for PARMLIB member
//*
//*********************************************************************
//PARMALOC EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
ALLOC NEW DA('TEST.DATASET.PFX.SZWEAUTH') +
  dsntype(library) dsorg(po) recfm(f b) lrecl(80) +
  unit(sysallda) space(15,15) tracks
/*
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.SZWEAUTH(ZWESIP00)')
/*
//*********************************************************************
//*
//* Allocate the data set for plug-ins
//*
//*********************************************************************
//APPLALOC EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
ALLOC NEW DA('DOES.NOT.EXIST') +
  dsntype(library) dsorg(po) recfm(u) lrecl(0) +
  blksize(32760) unit(sysallda) space(30,15) tracks
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) bad ds prefix post-generate 1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: Zowe dataset prefix (zowe.setup.dataset.prefix) is not defined in Zowe YAML configuration file."
`;

exports[`init-mvs (SHORT) bad ds prefix post-generate 2`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: Zowe dataset prefix (zowe.setup.dataset.prefix) is not defined in Zowe YAML configuration file."
`;

exports[`init-mvs (SHORT) jcllib fails verification 1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0319E: zowe.setup.dataset.jcllib does not exist, cannot run. Run 'zwe init', 'zwe init generate', or submit JCL TEST.DATASET.PFX.SZWESAMP(ZWEGENER) before running this command."
`;

exports[`init-mvs (SHORT) jcllib fails verification 2`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0319E: zowe.setup.dataset.jcllib does not exist, cannot run. Run 'zwe init', 'zwe init generate', or submit JCL TEST.DATASET.PFX.SZWESAMP(ZWEGENER) before running this command."
`;

exports[`init-mvs (SHORT) parmlib negatives  1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: zowe.setup.dataset.parmlib is not defined in Zowe YAML configuration file."
`;

exports[`init-mvs (SHORT) parmlib negatives  2`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: zowe.setup.dataset.parmlib is not defined in Zowe YAML configuration file."
`;

exports[`init-mvs (SHORT) parmlib negatives  3`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Allocate the data set for PARMLIB member
//*
//*********************************************************************
//PARMALOC EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
ALLOC NEW DA('DOES.NOT.EXIST.ALL') +
  dsntype(library) dsorg(po) recfm(f b) lrecl(80) +
  unit(sysallda) space(15,15) tracks
/*
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('DOES.NOT.EXIST.ALL(ZWESIP00)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) parmlib negatives  4`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.ZWESAPL(ZWESIP00)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) parmlib negatives  5`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Allocate the data set for PARMLIB member
//*
//*********************************************************************
//PARMALOC EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
ALLOC NEW DA('DOES.NOT.EXIST') +
  dsntype(library) dsorg(po) recfm(f b) lrecl(80) +
  unit(sysallda) space(15,15) tracks
/*
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('DOES.NOT.EXIST(ZWESIP00)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) parmlib negatives  6`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Allocate the data set for PARMLIB member
//*
//*********************************************************************
//PARMALOC EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
ALLOC NEW DA('TEST.DATASET.PFX.SZWEAUTH') +
  dsntype(library) dsorg(po) recfm(f b) lrecl(80) +
  unit(sysallda) space(15,15) tracks
/*
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.SZWEAUTH(ZWESIP00)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) simple --dry-run 1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.PARMLIB(ZWESIP00)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;

exports[`init-mvs (SHORT) zwesip00 customization  1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Create data sets if they do not exist
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEMVS) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEMVS)
--- JCL Content ---
//ZWEMVS   JOB
//*********************************************************************
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project.
//*
//*********************************************************************
//*********************************************************************
//*
//* Copy the PARMLIB member to data set
//*
//*********************************************************************
//PARMCOPY EXEC PGM=IKJEFT01
//SYSTSPRT DD SYSOUT=A
//SYSTSIN  DD *
REPRO +
  INDATASET('TEST.DATASET.PFX.SZWESAMP(ZWESIP00)') +
  OUTDATASET('TEST.DATASET.PFX.PARMLIB(ZWESIP11)')
/*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe custom data sets are initialized successfully."
`;
